<resources>
    <string name="app_name">NearBuy</string>
    <string name="back_arrow">back arrow</string>
    <string name="nearbuy">NearBuy</string>
    <string name="login_within">Login within</string>
    <string name="or">or</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="create_you_own_online_shop_or_find_any_products_near_you">Create your own online shop or find any products near you</string>
    <string name="create_a_new_account">Create new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="join_now">Join Now</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="login_as_a_regular_user">Login as a regular user</string>
    <string name="product_name">Product Name...</string>
    <string name="description">Description...</string>
    <string name="product_price">Product price</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>
    <string name="remember_me">Remember Me</string>
    <string name="computers">computers</string>
    <string name="clothes">clothes</string>
    <string name="appliances">appliances</string>
    <string name="smartphones">smartphones</string>
    <string name="toys">toys</string>
    <string name="watches">watches</string>
    <string name="sport_equipment">sport equipment</string>
    <string name="food">food</string>
    <string name="fresh_marker">fresh market</string>
    <string name="for_pets">for pets</string>

    <string name="login_as_regular_user">Login as a regular user</string>
    <string name="create_your_own_online_store_or_find_any_product_you_want">First time?? Create your own online store or find any product you want</string>
    <string name="join_as_regular_user">Join as a regular User</string>
    <string name="join_as_store_owner">Join as a store owner</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_as_store_owner">Login as store owner</string>
    <string name="log_out">Log out</string>
    <string name="user_name">User Name</string>
    <string name="my_account">My account</string>
    <string name="saved_items">Saved items</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="settings_and_exit">Settings and Exit</string>
    <string name="category">Category</string>
    <string name="product_description">Product description</string>
    <string name="close">CLOSE</string>
    <string name="update">UPDATE</string>
    <string name="close1">CLOSE</string>
    <string name="update1">UPDATE</string>
    <string name="address">Address</string>
    <string name="save">SAVE</string>
    <string name="add_to_cart">add to cart</string>
    <string name="next">NEXT</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="quantity">QUANTITY</string>
    <string name="please_confirm_your_shipment_details">PLEASE CONFIRM YOUR SHIPMENT DETAILS </string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="confirm_order">Confirm order</string>
    <string name="your_items">YOUR ITEMS</string>
    <string name="amount_to_pay">AMOUNT TO PAY</string>
    <string name="amount_to_pay1">AMOUNT TO PAY</string>
    <string name="your_items1">YOUR ITEMS</string>
    <string name="your_order_was_placed_successfully">YOUR ORDER WAS PLACED SUCCESSFULLY</string>
    <string name="orders">Orders</string>
    <string name="orders1">ORDERS</string>
    <string name="check_new_orders">Check new Orders</string>
    <string name="new_orders">NEW ORDERS</string>
    <string name="date_and_time">date and time</string>
    <string name="my_store">MY STORE</string>
    <string name="confirmed_order">CONFIRMED ORDER</string>
    <string name="price">Price :</string>
    <string name="nis">NIS</string>
    <string name="nis1">NIS</string>
    <string name="price1">Price</string>
    <string name="you_order_was_chippd">Your order was shipped</string>
    <string name="your_order_notshipped">Your order is not shipped yet. It will be shipped soon.</string>
    <string name="search">Search</string>
    <string name="login_as_an_admin">login as an admin</string>
    <string name="new_admin">New Admin?</string>
    <string name="login_as_admin">Login as admin</string>
    <string name="favorite">favorite</string>
    <string name="find_your_product">Find your product</string>
    <string name="choose_the_category_of_product_you_want_to_add">Choose the category of product you want to add</string>
    <string name="choose_a_category_to_find">CHOOSE A CATEGORY TO FIND</string>
    <string name="welcome">Welcome</string>
    <string name="get_code">get code</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_phone_number_to_get_code_for_phone_number_varification">Enter your phone number to get code for phone number varification</string>
    <string name="nomer">###</string>
    <string name="verify_phone">verify phone</string>
    <string name="phone_number_or_login">Phone number or Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="manage_store">Manage store</string>
    <string name="manager">MANAGER</string>
    <string name="maintain_products">maintain products</string>
    <string name="edit_products">Edit products</string>
    <string name="todo">TODO</string>
    <string name="new_orders1">New orders</string>
    <string name="add_new_product1">Add new product</string>
    <string name="manage_products">Manage products</string>
    <string name="apply_changes">Apply changes</string>
    <string name="edit">Edit</string>
    <string name="show_details">SHOW DETAILS</string>
    <string name="delete">Delete</string>
    <string name="welcome_to_our_shop_create_new_account_anf_enjoy_our_app">Welcome to NearBuy shop .Create new account and enjoy our app</string>
    <string name="admin">Admin?</string>
    <string name="shop_as_a_costumer">Shop as a costumer</string>
    <string name="checkout">Checkout</string>
    <string name="sport">sport</string>
    <string name="update_image">UPDATE IMAGE</string>
    <string name="favorite1">Favorite</string>
    <string name="find_by_category">Find by Category</string>
    <string name="favorite_products">FAVORITE PRODUCTS</string>
    <string name="shipped_orders">Shipped orders</string>
    <string name="admins_activity">Admins Activity</string>
    <string name="create_new_admin_account">Create new admin account</string>
    <string name="ready_for_shipping">Ready for shipping</string>
    <string name="ready_for_shipment">Ready for shipment</string>
    <string name="order_packed_and_ready">order packed and ready</string>
    <string name="manage_orders">Manage orders</string>
    <string name="waiting_for_shipment">Waiting for shipment</string>
    <string name="master">Master</string>
    <string name="order_number">Order number</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="delivered_orders">DELIVERED ORDERS</string>
    <string name="ordered_products">ORDERED PRODUCTS</string>
    <string name="vegetables">vegetables</string>
    <string name="mushrooms">mushrooms</string>
    <string name="fruits">fruits</string>
    <string name="dairy">dairy</string>
    <string name="canned_food">canned food</string>
    <string name="eggs">eggs</string>
    <string name="bakery">bakery</string>
    <string name="spices">spices</string>
    <string name="soft_drinks">soft drinks</string>
    <string name="your_orders">YOUR ORDERS</string>
    <string name="cereals">cereals</string>
    <string name="categories">categories</string>
    <string name="shop_all_products">SHOP ALL PRODUCTS</string>
    <string name="hot_deals">HOT DEALS%</string>
    <string name="categories1">CATEGORIES</string>
    <string name="enter_a_product_name">Enter a product name...</string>
    <string name="shop_by_category">SHOP BY CATEGORY</string>
    <string name="deal_price">DEAL PRICE?</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="store_info">Address : Tel Aviv , Hertzl 0</string>
    <string name="store_tel">Phone : 050-000-0000</string>
    <string name="delete_admin_account">DELETE ADMIN ACCOUNT</string>
    <string name="delete_admin_account1">Delete admin account</string>
    <string name="return_to_user_login">Return to User login</string>
</resources>