<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/shopping_cart_green"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/my_account_img"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_saved_items"
            android:icon="@drawable/saved_items_img"
            android:title="@string/saved_items" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_devices_other_24"
            android:title="@string/orders" />

    </group >
    <item android:title="@string/settings_and_exit" >

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_img"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_img"
                    android:title="@string/log_out" />

            </group>

        </menu>

    </item>
</menu>
