<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrderActivity"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_confirm_your_shipment_details"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/name_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirmOrder"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name"
    />
    <EditText
        android:id="@+id/phone_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_confirmOrder"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/phone_number"/>
    <EditText
        android:id="@+id/city_address_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_confirmOrder"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/city"
        />

    <EditText
        android:id="@+id/address_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_address_confirmOrder"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/address"
        />
    <TextView
        android:id="@+id/txt_totalPrice_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_to_pay1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_above="@+id/btn_confirmOrder"
      />

    <Button
        android:id="@+id/btn_confirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/buttons"
        android:text="@string/confirm_order"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>


</RelativeLayout>