<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Admin.AdminRegistrationActivity">


    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_icon_nearbuy"
        android:contentDescription="@string/todo" />

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/login_admin_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:paddingTop="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/pass_admin_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/confirm_pass_admin_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/admin_reg_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/admin_reg_create_new_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_grey"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
