<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountSettingsActivity"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                />


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile_img"
        android:layout_below="@id/settings_appbar"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/settings_update_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="-110dp"
        android:gravity="bottom"
        android:text="@string/update_image"
        android:layout_below="@+id/setting_profile_image"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_update_profile_pic"
        android:layout_margin="5dp"
        android:hint="@string/phone_number"

        />
    <EditText
        android:id="@+id/settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:layout_margin="5dp"
        android:hint="@string/name"

        />
    <EditText
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_name"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"

        />
    <EditText
        android:id="@+id/settings_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_password"
        android:layout_margin="5dp"
        android:hint="@string/city"

        />
    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_city"
        android:layout_margin="5dp"
        android:hint="@string/address"

        />
    <Button
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/settings_address"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="25dp"
        android:textColor="@color/white"
        android:background="@drawable/button_grey"

        />

</RelativeLayout>