
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminAddNewProductActivity"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/tv_add_new"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/manager"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
          />
    </LinearLayout>
        <View
            android:background="@color/grey"
            style="@style/Divider.Horizontal"
            android:layout_marginTop="40dp" />
    <ImageView
        android:background="@drawable/background"
        android:id="@+id/select_product_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/tv_add_new"
        android:layout_centerHorizontal="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/add_new_photo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:hint="@string/product_name"
        android:background="@drawable/inputs_design"
        android:autofillHints="" />
    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:hint="@string/description"
        android:background="@drawable/inputs_design"
        />
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:hint="@string/product_price"
        android:background="@drawable/inputs_design"
        android:autofillHints="" />
        <CheckBox
            android:id="@+id/is_deal_chkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_price"
            android:layout_below="@id/product_price"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />

        <Button
        android:id="@+id/btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_deal_chkbox"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/add_new_product"
        android:background="@drawable/button_grey"
        android:textColor="@color/white"

        />
</RelativeLayout>
</ScrollView>