<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".User.UserRegistrationActivity">


    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_icon_nearbuy"
        android:contentDescription="@string/todo" />

    <TextView
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/register_phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/register_confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:backgroundTint="@color/darkGrey"
        android:id="@+id/register_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:paddingTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/registr_create_new_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_grey"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>

